fix macos scroll-overflow color

--- a/client/src/stylesheet.css
+++ b/client/src/stylesheet.css
@@ -16,3 +16,7 @@
     -webkit-text-fill-color: transparent;
   }
 }
+
+body, html {
+  background: #fefdf8;
+}
